# meerkit

./: .gitignore  404.html  README.md  get_current_followers.py  index.html  insta_interface.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: .copilot-commit-message-instructions.md
.github/instructions/: plan.agent.md  python.instructions.md
api-reference/: index.html
architecture/: index.html
backend/: app.py  config.py  extensions.py  index.html  scan_worker.py
backend/db/: db_handler.py  schemas.py
changelog/: index.html
contributing/: index.html
database/: index.html
development/: index.html
docs/: api-reference.md  architecture.md  backend.md  changelog.md  contributing.md  development.md  frontend.md  index.md  prediction-algorithm.md  probability-model.md  setup.md  showcase.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
meerkit/: app.py  config.py  logging_config.py  logging_context.py  scan_worker.py
prediction-algorithm/: index.html
probability-model/: index.html
search/: search_index.json
setup/: index.html
showcase/: index.html
tests/: fetch_target_user_metadata.py  fetch_target_user_relationships.py  test_auth_usage_routes.py  test_automation_alt_filtering.py  test_automation_alt_links_routes.py  test_automation_cache_metrics_routes.py  test_automation_heartbeat.py  test_diff_accessibility.py  test_history_accessibility_badge.py  test_instagram_gateway_cache.py  test_logging_config.py  test_prediction_metadata.py  test_prediction_routes.py  test_scan_force_refresh.py
(+81 files in other folders)
