[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meerkit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "pymdown-extensions>=10.21",
    "mkdocs-minify-plugin>=0.8.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pylance>=3.0.0",
    "ruff>=0.15.6",
    "debugpy>=1.8.20",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ipython>=9.12.0",
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["meerkit*"]
